sass/controls.scss
input[type='text'] {
  font-family: $font-family;
  font-size: 1.20rem;
  font-weight: 300;
  color: $black;
  padding: 0;
}

input[type='range'] {
  -webkit-appearance: none;
  height: 1.5rem;
  margin: 0;
  padding: 0;
  outline: none;
  background-color: transparent;
}

input[type=range]::-webkit-slider-runnable-track {
  height: 2px;
  background-color: #ccc;
}

input[type=range]::-moz-range-track {
  height: 2px;
  background-color: #ccc;
}

input[type=range]::-ms-track {
  height: 2px;
  background-color: #ccc;
}

input[type='range']::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin-top: calc(-0.75rem + 1px);
  border-radius: 0.75rem;
  background: $black;
}

input[type='range']::-moz-range-thumb {
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 0.75rem;
  background: $black;
  border: 0;
}

input[type='range']::-ms-thumb {
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 0.75rem;
  background: $black;
}

input[type='range']::-webkit-slider-thumb:hover,
input[type='range']::-webkit-slider-thumb:active
{
  background: $orange;
}

input[type='range']::-moz-range-thumb:hover,
input[type='range']::-moz-range-thumb:active
{
  background: $orange;
}

input[type='range']::-ms-thumb:hover,
input[type='range']::-ms-thumb:active
{
  background: $orange;
}

input[type='range']:disabled::-webkit-slider-thumb,
input[type='range']:disabled::-webkit-slider-thumb:hover,
input[type='range']:disabled::-webkit-slider-thumb:active
{
  background: #ccc;
}

input[type='range']:disabled::-moz-range-thumb,
input[type='range']:disabled::-moz-range-thumb:hover,
input[type='range']:disabled::-moz-range-thumb:active
 {
  background: #ccc;
}

input[type='range']:disabled::-ms-thumb,
input[type='range']:disabled::-ms-thumb:hover,
input[type='range']:disabled::-ms-thumb:active
 {
  background: #ccc;
}

input[type=range]::-moz-focus-outer {
  border: 0;
}

button {
  border: solid #ddd;
  background: #ddd;
  outline: none;
  font-size: 1.0rem;
  font-family: $font-family;
  color: $black;
  cursor: pointer;
  margin: 0;
}

button:disabled {
  border-color: $border-color;
  color: $border-color;
  cursor: default;
}

.button-tiny {
  border-radius: 6px;
  border-width: 2px;
  padding: 0.0rem 0.5rem;
}

.button-small {
  border-radius: 10px;
  border-width: 2px;
  padding: 0.25rem 0.5rem;
}

.button-full {
  border-radius: 10px;
  border-width: 3px;
  padding: $size-half;
}

.button-hollow {
  background: $white;
  border-color: #ccc;
}

.button-enabled, .button-enabled:hover {
  background: $orange;
  border-color: $orange;
  color: $white;
}

.underlinedInput {
  outline: none;
  border: solid $black;
  border-width: 0 0 1px 0;
  border-radius: 0;  /* For iOS */
}

.control {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  align-items: center;
}

.control-label {
  width: 30%;
  box-sizing: border-box;
}

.control input[type='range'] {
  flex: 1;
}

.control-value {
  width: 5.0rem;
  padding-left: 0.5rem;
  box-sizing: border-box;
}

@media (max-width: 768px) {
  .control {
    -webkit-align-items: flex-start;
    align-items: flex-start;
  }

  .control-label {
    width: 35%;
  }

  .control input[type='range'] {
    margin-top: calc(0.75rem - 1px);
    margin-bottom: calc(0.75rem - 1px);
  }
}

@media (max-width: 480px) {
  .control {
    flex-wrap: wrap;
  }

  .control-label {
    order: 0;
    width: auto;
  }

  .control-value {
    order: 1;
  }

  .control input[type='range'] {
    order: 2;
    flex: 0 0 100%;
    margin-top: calc(0.75rem - 1px);
    margin-bottom: calc(1.0rem - 1px);
  }
}

@media (hover) {
  .button-hollow:enabled:hover {
    background: $light-orange;
    border-color: $orange;
    color: $orange;
  }
}




/* Keyboard */
.keyboard-outer-container {
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 11.0rem;
  overflow: hidden;
}

.keyboard-scroll-button {
  background: #c1c1c1;
  -webkit-flex: 0 0 40px;
  flex: 0 0 40px;
}

.keyboard-scroll-button:hover {
  background: #a1a1a1;
}

.keyboard-container {
  position: relative;
  overflow-x: hidden;
  overflow-y: hidden;
  background: $white;
}

.keyboard {
  height: 11.0rem;
  white-space: nowrap;
  font-size: 0;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.keyboard-key {
  position: relative;
}

.keyboard-white-key {
  box-sizing: border-box;
  height: 100%;
  width: 3.5rem;
  border-style: solid;
  border-color: $black;
  border-width: 1px;
  border-top-width: 2px;
  border-bottom-width: 2px;
  background: $white;
  color: $black;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.keyboard-white-key:first-child {
  border-left-width: 2px;
}

.keyboard-white-key:last-child {
  border-right-width: 2px;
}

.keyboard-key-label {
  line-height: 1.5rem;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: 1.0rem;
}

.keyboard-key-root-indicator {
  display: inline-block;
  border-radius: 6px;
  padding: 0.0rem 0.25rem;
  background: $red;
  color: $white;
  font-size: 0.75rem;
}

.keyboard span.g,
.keyboard span.a,
.keyboard span.b,
.keyboard span.d,
.keyboard span.e {
  margin-left: -1.25rem;
}

.keyboard span.a:first-child {
  margin-left: 0;
}

.keyboard-black-key {
  box-sizing: border-box;
  background: $black;
  height: 60%;
  width: 2.5rem;
  margin-left: -1.25rem;
  vertical-align: top;
  z-index: 2;
  color: $white;
  border: 2px solid $black;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.keyboard-key.pressed {
  background: $orange;
}
.keyboard-scroll-button.pressed {
  background: $orange;
}

@media (min-width: 768px) {
  .keyboard-outer-container {
    height: 15.0rem;
    margin-left: 0;
    margin-right: 0;
  }

  .keyboard-container {
    background: none;
  }

  .keyboard {
    height: 15.0rem;
  }

  .keyboard-white-key {
    width: 4.0rem;
  }

  .keyboard-black-key {
    width: 3.0rem;
    margin-left: -1.5rem;
  }

  .keyboard span.g,
  .keyboard span.a,
  .keyboard span.b,
  .keyboard span.d,
  .keyboard span.e {
    margin-left: -1.5rem;
  }

  .keyboard-key-root-indicator {
    font-size: 1.0rem;
  }
}

